src/CustomMarker/CustomMarker.scss
.custom-marker {
  &__container {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 10px;
    line-height: 1.35;
    letter-spacing: 0.6px;
    color: var(--page-text-color);
    position: relative;
    box-sizing: border-box;
    top: -50%;

    -webkit-transition: background-color 250ms linear, transform 250ms;
    -moz-transition: background-color 250ms linear, transform 250ms;
    -o-transition: background-color 250ms linear, transform 250ms;
    -ms-transition: background-color 250ms linear, transform 250ms;
    transition: background-color 250ms linear, transform 250ms;

    &:hover {
      -ms-transform: scale(2);
      -webkit-transform: scale(2);
      transform: scale(2);

      .custom-marker__point {
        height: auto;
        width: auto;
        gap: 8px;

        .image-container {
          width: 44px !important;
          height: 44px !important;
        }

        .text-container {
          display: flex;
          visibility: visible;
          width: auto;
        }
      }

      .custom-marker__bg {
        opacity: .9;
        filter: brightness(0.5);
      }

      .custom-marker__bg-pointer {
        display: none;
      }
    }
  }

  &__point {
    width: 100%;
    height: 100%;
    padding: 3px;
    z-index: 2;
    position: absolute;
    display: flex;
    left: 0px;
    top: 0px;
    border-color: unset;
    border: 1px;
    border-radius: 3px;
    white-space: nowrap;
    -webkit-transition: background-color 250ms linear, transform 250ms;
    -moz-transition: background-color 250ms linear, transform 250ms;
    -o-transition: background-color 250ms linear, transform 250ms;
    -ms-transition: background-color 250ms linear, transform 250ms;
    transition: background-color 250ms linear, transform 250ms;

    .custom-marker__bg-pointer {
      content: "";
      box-shadow: -2px -2px 2px 0px rgb(0 0 0 / 8%);
      border-radius: 2px;
      position: absolute;
      bottom: -3px;
      left: 50%;
      width: 26px;
      height: 26px;
      transform: translateX(-50%) rotate(45deg);
      transform-origin: center;
      z-index: 1;
    }

    .image-container {
      width: 100%;
      height: 100%;
      position: relative;
      z-index: 1;
    }

    .flag {
      position: absolute;
      right: -3px;
      font-size: 22px;
      top: -8px;
      z-index: 1;
    }

    img {
      width: 100% !important;
      height: 100%;
      object-fit: cover;
      border-radius: 50%;
    }

    .text-container {
      flex-direction: column;
      justify-content: center;
      align-items: flex-start;
      color: var(--page-text-color);
      z-index: 0;
      padding-right: 8px;

      display: none;
      visibility: hidden;
      width: 0;
      -webkit-transition: visibility 250ms linear, width 250ms linear;
      -moz-transition: visibility 250ms linear, width 250ms linear;
      -o-transition: visibility 250ms linear, width 250ms linear;
      -ms-transition: visibility 250ms linear, width 250ms linear;
      transition: visibility 250ms linear, width 250ms linear;
    }
  }

  &__bg,
  &__container {
    min-width: 100%;
    min-height: 100%;
  }

  &__bg {
    border-radius: 50px;
  }

  .bg-color {
    /* Fallback bg color in case the js don't work */
    background-color: #5e606f;
    opacity: 0.7;
  }

  &__content,
  &__bg {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
  }

  &:has(.custom-marker__container:hover) {
    z-index: 99999 !important;
  }
}

/* Light theme */
.light .custom-marker__container:hover .custom-marker__bg {
  filter: brightness(1.5);
}

